# traffic-control-tower

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/common/: Cargo.toml  build.rs
crates/common/src/: config.rs  error.rs  lib.rs  map.rs  telemetry.rs
crates/common/src/proto/: mod.rs  traffic.rs
crates/traffic-api/: Cargo.toml
crates/traffic-api/src/: main.rs
crates/traffic-ingest/: Cargo.toml
crates/traffic-ingest/migrations/: 20251119003749_initial_schema.down.sql  20251119003749_initial_schema.up.sql
crates/traffic-ingest/src/: batch.rs  main.rs
crates/traffic-sim/: Cargo.toml
crates/traffic-sim/src/: components.rs  main.rs  map.rs  routes.rs
crates/traffic-sim/src/systems/: broadcast.rs  mod.rs  movement.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  declarations.d.ts
proto/: telemetry.proto
