[package]
name = "traffic-common"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15"
envy = "0.4.2"
thiserror = "2.0.17"
rdkafka = "0.38.0"
sqlx = "0.9.0-alpha.1"
redis = "1.0.0-rc.3"

[build-dependencies]
prost-build = "0.12"
