[package]
name = "traffic-common"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
thiserror = { workspace = true }
rdkafka = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }

osmpbfreader = "0.16"
geo = "0.26"
glam = { version = "0.25", features = ["serde"] }
bevy_ecs = "0.12" # Чтобы работала derive(Resource)

[build-dependencies]
prost-build = "0.12"

