[package]
name = "traffic-api"
version = "0.1.0"
edition = "2021"

[dependencies]
traffic-common = { path = "../common" }
tokio = { workspace = true }
anyhow = "1.0"
tracing = { workspace = true }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] } # CORS нужен для React

# Redis
redis = { workspace = true }

# JSON handling
serde = { workspace = true }
serde_json = "1.0"