[package]
name = "traffic-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
# 👇 Этих ребят не хватало:
redis = { version = "0.24", features = ["tokio-comp"] }
tower-http = { version = "0.5", features = ["cors"] }
common = { path = "../common", package = "traffic-common" } # ВАЖНО: правильное имя пакета
anyhow = "1.0"