[package]
name = "traffic-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
traffic-common = { path = "../common" }

tokio = { workspace = true }
rdkafka = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
    futures = "0.3" # Needed for working with message streams

sqlx = { workspace = true }
redis = { workspace = true }
serde_json = "1.0"

