[package]
name = "traffic-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
# Подключаем нашу общую библиотеку локально
traffic-common = { path = "../common" }

# Используем версии из Workspace
tokio = { workspace = true }
rdkafka = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Специфичные для симулятора
rand = "0.8"
chrono = "0.4"


osmpbfreader = "0.16"
# Гео-математика (расстояния между точками)
geo = "0.26"
# Линейная алгебра (убедись, что версия совпадает с workspace или просто добавь)
glam = "0.25"
bevy_ecs = "0.12"